test/good/09_let_bound_all_erased.er
let 0 Nat : U = (0 A : U) -> A -> (A -> A) -> A;
let zero : Nat = \A z s. z;
let succ : Nat -> Nat = \n A z s. s (n A z s);

let 0 bad : (0 n : Nat) -> Nat = \n. let m : Nat = n; m;

zero
