test/bad/13_erased_lambda_arg.er
let 0 Nat : U = (0 A : U) -> A -> (A -> A) -> A;
let zero : Nat = \A z s. z;
let succ : Nat -> Nat = \n A z s. s (n A z s);

let f : (Nat -> Nat) -> Nat = \g. g zero;
let bad : (0 n : Nat) -> Nat = \n. f (\m. n);
bad
